// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render 1`] = `
<div
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="select-display"
  >
    <span>
       
    </span>
    <div
      className="select-input"
    />
    <span
      style={
        Object {
          "float": "right",
        }
      }
    >
      <StyledArrowWContext
        direction="down"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      />
    </span>
  </div>
  <DropDownListWContext
    controlled={true}
    open={false}
  >
    <StyledDropDownItemWContext
      className="active"
      key="a"
      label="A"
      onClick={[Function]}
      onMouseOver={[Function]}
      value="a"
    >
      A
    </StyledDropDownItemWContext>
    <StyledDropDownItemWContext
      className={false}
      key="b"
      label="B"
      onClick={[Function]}
      onMouseOver={[Function]}
      value="b"
    >
      B
    </StyledDropDownItemWContext>
  </DropDownListWContext>
</div>
`;

exports[`Select should render multiple select 1`] = `
<div
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="select-display"
  >
    <span>
       
    </span>
    <div
      className="select-input"
    />
    <span
      style={
        Object {
          "float": "right",
        }
      }
    >
      <StyledArrowWContext
        direction="down"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      />
    </span>
  </div>
  <DropDownListWContext
    controlled={true}
    open={false}
  >
    <StyledDropDownItemWContext
      className="active"
      key="a"
      label="A"
      onClick={[Function]}
      onMouseOver={[Function]}
      value="a"
    >
      A
    </StyledDropDownItemWContext>
    <StyledDropDownItemWContext
      className={false}
      key="b"
      label="B"
      onClick={[Function]}
      onMouseOver={[Function]}
      value="b"
    >
      B
    </StyledDropDownItemWContext>
    <StyledDropDownItemWContext
      className={false}
      key="c"
      label="C"
      onClick={[Function]}
      onMouseOver={[Function]}
      value="c"
    >
      C
    </StyledDropDownItemWContext>
  </DropDownListWContext>
</div>
`;

exports[`Select should render single select 1`] = `
<div
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="select-display"
  >
    <span>
      A
    </span>
    <div
      className="select-input"
    />
    <span
      style={
        Object {
          "float": "right",
        }
      }
    >
      <StyledArrowWContext
        direction="down"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      />
    </span>
  </div>
  <DropDownListWContext
    controlled={true}
    open={false}
  >
    <StyledDropDownItemWContext
      className="active"
      key="a"
      label="A"
      onClick={[Function]}
      onMouseOver={[Function]}
      value="a"
    >
      A
    </StyledDropDownItemWContext>
    <StyledDropDownItemWContext
      className={false}
      key="b"
      label="B"
      onClick={[Function]}
      onMouseOver={[Function]}
      value="b"
    >
      B
    </StyledDropDownItemWContext>
    <StyledDropDownItemWContext
      className={false}
      key="c"
      label="C"
      onClick={[Function]}
      onMouseOver={[Function]}
      value="c"
    >
      C
    </StyledDropDownItemWContext>
  </DropDownListWContext>
</div>
`;
